# AutoOffer

./: .gitignore  README.md  build.py  pyproject.toml
.github/workflows/: release.yml
data/: resume_template_example.yaml
src/: __init__.py  main.py
src/core/: clipboard.py  matcher.py  ocr.py  resume_manager.py
src/data/: resume_template.yaml
src/gui/: main_window.py  resume_editor.py  screenshot_widget.py  selection_dialog.py  toast.py
src/utils/: distance.py  hotkey.py  logger.py  resource.py
